<resources>
    <string name="app_name">LiveConcerts</string>
    <string name="welcome">Bienvenido a LiveConcerts</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="signIn">Registrarse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Conciertos</string>
    <string name="tab_text_2">Tus artistas</string>
    <string name="tab_text_3">Buscar</string>
    <string name="campoVacio">Por favor, no dejes ningún campo vacío</string>
    <string name="noValido">La tarjeta no es válida</string>
    <string name="comprada">Entrada comprada</string>
</resources>